[0.1.6+SVN]
* Bugfixes. <wrzasq>

[0.1.5]
* Updated for new (avesta branch) database structure. <wrzasq>
* Dropped automatic account blocking. <wrzasq>
* Accounts are now created by names, using OTS_Account::createNamed() method. <wrzasq>
* OTS_SpellsList implements now IteratorAggregate and Countable interfaces. <wrzasq>
* Code optimalisation. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.4]
* Updated for last database changes. <wrzasq>
* Updated OTAdmin implementation. <wrzasq>
* Binary information protocol support. <wrzasq>
* Server status routines grouped. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.3]
* Updated documentation. <wrzasq>
* VIP list support. <wrzasq>
* Bans lists. <wrzasq>
* PHK and PHAR packages. <wrzasq>
* Separated make targets for POT package and it's documentation. <wrzasq>
* More stricted parameters and results types. <wrzasq>
* Added display driver interface for non-database resources. <wrzasq>
* Added existence checking methods. <wrzasq>
* Added __get() and __set() methods to OTS_Admin. <wrzasq>
* PDO connection is now set to throw exceptions on SQL errors instead of silence them. <wrzasq>
* Code optimalisation. <wrzasq>
* Bugfixes. <wrzasq>

[0.1.2]
* OTAdmin protocol support. <wrzasq>
* Supports bank balance. <wrzasq>
* getStorage()/setStorage() methods in OTS_Player class. <wrzasq>
* More secured. <wrzasq>
* Fixed buffered streams to use little-endian storage (like Open Tibia does). <wrzasq>
* Implemented NetworkMessage. <wrzasq>

[0.1.1]
* Loading groups by names. <wrzasq>
* Constructors with optional identifier argument for automatical object loading. <wrzasq>
* OTS_Toolbox class. <wrzasq>
* Access calculations in OTS_Account class. <wrzasq>
* E_OTS_General class. <wrzasq>

[0.1.0]
* Houses support. <wrzasq>
* No need to call POT::createObject(). <wrzasq>
* Separated data/ directory resources loaders. <wrzasq>
* Default data/ directory resources instances within POT class. <wrzasq>