@@ -1,4 +1,5 @@
 [0.1.6+SVN]
+* Updated OTAdmin client (server saving and opening). <wrzasq>
 * Bugfixes. <wrzasq>
 
 [0.1.5]
